@@ -303,4 +303,5 @@ def interact(banner=None, readfunc=None, local=None):
 
 
 if __name__ == '__main__':
-    interact()
+    import pdb
+    pdb.run("interact()\n")
